<resources>
    <string name="app_name">AndroidContacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Имя</string>
    <string name="exit">Выход</string>
    <string name="numPhone">Номер телефона</string>
    <string name="save">Сохранить</string>
    <string name="isDoNotEmpty">Поле не может быть пустым</string>
    <string name="deleteAll">Удалить все</string>
    <string name="date_create">"Дата создания: 00:00 "</string>
</resources>