<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/black_gray"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/name"
            android:textColor="@color/pale_mauve"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/numPhoneTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/numPhone"
            android:textColor="@color/pale_mauve"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/deleteIconIV"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:src="@drawable/baseline_delete_forever_24" />

        <TextView
            android:id="@+id/dateCreateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_create"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>